# ano-distant-echo

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  TODO.md
docs/: CabinetIR.md  Delay.md  Design.md  Effect.md  JUCEPlugin.md  Overdrive.md  Oversampler.md  SmoothedValue.md  VCVRack.md  lessons-learned.md
juce-plugin/: AnoLookAndFeel.cpp  AnoLookAndFeel.h  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  test_laf.cpp
libs/effects/: AllpassFilter.h  BiquadFilter.h  CMakeLists.txt  CabinetIR.h  CabinetIR_data.h  CabinetIR_data_4x12.h  CabinetIR_data_combo.h  Delay.h  DelayLine.h  Effect.h  EnvelopeFollower.h  OnePoleFilter.h  Overdrive.h  Oversampler.h  SmoothedValue.h
python/: cabinet_ir.py  compare.py  delay.py  generate_docs_plots.py  generate_golden.py  overdrive.py  oversampler.py  pyproject.toml  utils.py
python/tests/: test_effects.py
scripts/: install-juce.sh  install-rack.sh
tests/: CMakeLists.txt  test_biquad.cpp  test_cabinet.cpp  test_delay.cpp  test_envelope.cpp  test_overdrive.cpp  wav_compare.cpp  wav_io.h
vcv-rack/: CMakeLists.txt  plugin.json
vcv-rack/src/: DelayModule.cpp  OverdriveModule.cpp  plugin.cpp  plugin.hpp
